# aws-report

./: Makefile  Pipfile  README.md  aws_report.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
