[tool.poetry]
name = "aws-report"
version = "0.1.0"
description = "Generate a report of AWS resources"
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.31"
pylint = "^2.13.4"
pytest = "^7.1.1"
requests = "^2.27.1"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest-xdist = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
