[tool.poetry]
name = "aws-report"
version = "0.1.0"
description = "Generate a report of AWS resources"
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.21.31"
pylint = "^3.0.1"
pytest = "^7.1.1"
requests = "^2.32.0"
black = "^24.3.0"
flake8 = "^6.0.0"
pytest-xdist = "^3.3.1"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/239
urllib3 = ">=1.25.4,<1.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]
